RESOLVED FIXED94617
[GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html is failing
https://bugs.webkit.org/show_bug.cgi?id=94617
Summary [GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html is failing
Zan Dobersek
Reported 2012-08-21 11:00:21 PDT
[GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html is failing
Attachments
Patch (3.38 KB, patch)
2012-08-21 11:02 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2012-08-21 11:02:09 PDT
Zan Dobersek
Comment 2 2012-08-21 11:02:50 PDT
Comment on attachment 159725 [details] Patch This issue was solved for Qt in an identical way in bug #35086.
Zan Dobersek
Comment 3 2012-08-21 11:03:14 PDT
CC-ing people with review powers.
Martin Robinson
Comment 4 2012-08-21 11:07:53 PDT
Comment on attachment 159725 [details] Patch Great!
WebKit Review Bot
Comment 5 2012-08-21 17:13:56 PDT
Comment on attachment 159725 [details] Patch Clearing flags on attachment: 159725 Committed r126229: <http://trac.webkit.org/changeset/126229>
WebKit Review Bot
Comment 6 2012-08-21 17:13:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.