[GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html is failing https://bugs.webkit.org/show_bug.cgi?id=94617

Reviewed by Martin Robinson.

Tools:

Set the 'enable-file-access-from-file-uris' setting to true when
resetting default values. The other ports do this as well, giving
documents with local security origin permission to load other
local resources.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(resetDefaultsToConsistentValues):

LayoutTests:

Remove failure expectation for fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html
test as it now passes.

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/112463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126229 268f45cc-cd09-0410-ab3c-d52691b4dbfc